--- a/settings.json
+++ b/settings.json
@@ -1,13 +1,13 @@
 {
 "autoread": false,
-"autoplaymusic": true,
+"autoplaymusic": false,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"R U D A L - B O T Z", 
-"NomorOwner":"6283890109310", 
-"NamaOwner":"Akbarbarz", 
-"Dana":"083890109310", 
-"Ovo":"083890109310", 
-"Gopay":"083890109310", 
+"NamaBot":"BAYUBOT", 
+"NomorOwner":"6289525518325", 
+"NamaOwner":"BAYU OFC", 
+"Dana":"081285866502", 
+"Ovo":"TIDAK TERSEDIA", 
+"Gopay":"089525518325", 
 "HunterApi":"Ikyy69"
 }
