--- a/settings.json
+++ b/settings.json
@@ -3,9 +3,9 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"BAYUBOT", 
-"NomorOwner":"6289525518325", 
-"NamaOwner":"BAYU OFC", 
+"NamaBot":"Rizqi-Botz", 
+"NomorOwner":"6283136262784", 
+"NamaOwner":"Rizqi", 
 "Dana":"081285866502", 
 "Ovo":"TIDAK TERSEDIA", 
 "Gopay":"089525518325", 
